--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,33 +2,30 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
+    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Fork Awesome";
     font-size: 13pt;
     min-height: 0;
-    color: #EEEEEE;
 }
 window#waybar {
     background: @background;
     color: @foreground;
 }
 #workspaces button {
-    min-width: 13.5px;
+    min-width: 12px;
     opacity: 0.9;
     padding: 0 10px;
     background: @background;
-    color: @foreground;
+    color: #666666;
 }
 #workspaces button:hover {
-    min-width: 13.5px; 
+    min-width: 12px; 
     opacity: 0.9;
     box-shadow: inherit;
     text-shadow: inherit;
-    background-image: linear-gradient(0deg, @selection, @background-darker);
 }
 #workspaces button.active {
-    min-width: 13.5px;
-    background: #383838;
-    box-shadow: inset 0 -2.25px 0 #ffffff;
+    min-width: 12px;
+    color: #ffffff
 }
 #taskbar button.active {
     background-image: linear-gradient(0deg, @selection, @background-darker);
@@ -45,6 +42,14 @@ window#waybar {
 /* Battery Module */
 #battery {
     color: #9ab69b;
+}
+
+#workspaces {
+  color: #EEEEEE
+}
+
+#window {
+  color: #EEEEEE; 
 }
 
 /* PulseAudio Module */
