--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -34,9 +34,8 @@ window#waybar {
     background: @background;
 }
 
-/* Network Module */
 #network {
-    color: #9dbcd4; /* Pastel blue */
+    color: #9dbcd4;
     padding-right: 8px;
     padding-left: 4px
 }
@@ -61,7 +60,6 @@ window#waybar {
   padding: 4px
 }
 
-/* PulseAudio Module */
 #pulseaudio {
     color: #D4B483;
     padding-right: 12px
@@ -69,7 +67,7 @@ window#waybar {
 
 /* Clock Module */
 #clock {
-    color: #B39EB5; /* Pastel purple */
-    padding-left: 1.5px;
+    color: #EEEEEE;
+    padding-left: 4px;
     padding-right: 10px
 }
