--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -81,7 +81,7 @@ window#waybar {
 }
 /* Clock Module */
 #clock {
-    color: #D8C8DD;
+    color: #EEEEEE;
     padding-left: 6.5px;
     padding-right: 6.5px
 }
