--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,7 +1,7 @@
 @define-color background-darker #222222;
 @define-color background #252525;
 @define-color selection #545454;
-@define-color foreground #eeeeee;
+@define-color foreground #EEEEEE;
 @define-color comment #dfdfdf;
 @define-color cyan #8be9fd;
 @define-color green #50fa7b;
