--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -54,7 +54,8 @@ window#waybar {
 
 #pulseaudio {
     color: #D4B483;
-    padding-right: 10px
+    padding-right: 10px;
+    padding-left: 4px
 }
 #custom-space {
   color: #808080;
@@ -72,6 +73,6 @@ window#waybar {
 /* Clock Module */
 #clock {
     color: #EEEEEE;
-    padding-left: 6.5px;
-    padding-right: 6.5px
+    padding-left: 4px;
+    padding-right: 7.25px
 }
