--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -49,7 +49,8 @@ window#waybar {
 /* Battery Module */
 #battery {
     color: #9ab69b;
-    padding: 4px
+    padding-left: 4px;
+    padding-right: 2px
 }
 
 #pulseaudio {
@@ -76,3 +77,4 @@ window#waybar {
     padding-left: 4px;
     padding-right: 7.25px
 }
+
