--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Fork Awesome";
+    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Material Icons";
     font-size: 13pt;
     min-height: 0;
 }
@@ -54,8 +54,9 @@ window#waybar {
 }
 
 #pulseaudio {
+    font-size: 20.5px;
     color: #D4B483;
-    padding-right: 10px;
+    padding-right: 4px;
     padding-left: 4px
 }
 #custom-space {
