--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -12,14 +12,13 @@ window#waybar {
 }
 #workspaces button {
     min-width: 12px;
-    opacity: 0.9;
     padding: 0 8px;
     background: @background;
     color: #404040;
+    opacity: 0.9
 }
 #workspaces button:hover {
     min-width: 12px; 
-    opacity: 0.9;
     box-shadow: inherit;
     text-shadow: inherit;
 }
