NvChad to LazyVim + additional plugins for neovim

--- a/gtk-3.0/.config/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/.config/gtk-3.0/gtk-dark.css
@@ -6,13 +6,13 @@
 
 .background {
     color: white;
-    background-color: #252525;
+    background-color: #1c1c1c;
     transition: 0ms;
 }
 
 .background:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #282828;
+    background-color: #1e1e1e;
     transition: 0ms;
 }
 
