--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,5 +1,5 @@
 @define-color background-darker #161616;
-@define-color background #252525;
+@define-color background #1c1c1c;
 @define-color selection #323232;
 @define-color foreground #EEEEEE;
 @define-color comment #dfdfdf;
