--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Material Icons";
+    font-family: "Inter, JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Material Icons";
     font-size: 13pt;
     min-height: 0;
 }
@@ -33,8 +33,6 @@ window#waybar {
 	padding-left: 6px
 }
 #tray {
-	padding-bottom: 5px;
-	padding-top: 4px
 }
 #pulseaudio {
 	padding-right: 7px;
@@ -47,12 +45,8 @@ window#waybar {
 	padding-right: 8px;
 }
 #clock {
-	padding-top: 4px;
-	padding-bottom: 2px;
 	padding-right: 8px;
 }
 #custom-power {
-	padding-top: 4px;
-	padding-bottom: 3px;
 	padding-right: 14px
 }
