--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -46,11 +46,11 @@ window#waybar {
 	padding-right: 9px
 }
 #battery {
-	padding-right: 10px;
+	padding-right: 20px;
 }
 #clock {
 	padding-right: 9px;
 }
 #custom-power {
-	padding-right: 15px;
+    padding-left: 20px
 }
