--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free", "Material Icons";
+    font-family: "JetBrains Mono", "Font Awesome 6 Free", "Material Icons";
     font-size: 13pt;
     min-height: 0;
 }
@@ -36,8 +36,7 @@ window#waybar {
 	padding-left: 14px
 }
 #workspaces {
-	padding-left: 6px;
-    font-size: 12px
+	padding-left: 8px;
 }
 #pulseaudio {
 	padding-right: 10px;
@@ -47,11 +46,11 @@ window#waybar {
 	padding-right: 9px
 }
 #battery {
-	padding-right: 20px;
+	padding-right: 8px;
 }
 #clock {
-	padding-right: 9px;
+	padding-right: 8px;
 }
 #custom-power {
-    padding-left: 20px
+    padding-right: 18px;
 }
