--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,8 +2,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrains Mono", "Font Awesome 6 Free", "Material Icons";
-    font-size: 13pt;
+    font-family: "JetBrains Mono";
+    font-size: 18px;
     min-height: 0;
 }
 window#waybar {
@@ -13,44 +13,39 @@ window#waybar {
     padding-right: 2px
 }
 #workspaces button {
-    min-width: 12px;
+    min-width: 18px;
     padding: 0 6px;
     background: transparent;
-    color: #404040
+    color: #555555;
+    transition: border-color 0.5s ease, background 0.5s ease
 }
 #workspaces button:hover {
-    min-width: 12px; 
+    min-width: 18px;
     box-shadow: inherit;
     text-shadow: inherit;
+    background: #252525
 }
 #workspaces button.active {
-    background: transparent;
+    background: #323232;
+    border-bottom: 2px solid #eeeeee; 
     color: #eeeeee;
-    font-weight: bold
-}
-#tray {
-    padding-right: 2px
-}
-#custom-menu {
-	padding-right: 4px;
-	padding-left: 14px
-}
-#workspaces {
-	padding-left: 8px;
+    /* font-weight: bold */
 }
 #pulseaudio {
-	padding-right: 10px;
-	font-size: 20;
-}
-#backlight {
-	padding-right: 9px
-}
-#battery {
-	padding-right: 8px;
+    font-size: 20px;
+    padding-right: 8px
 }
 #clock {
-	padding-right: 8px;
+    padding-right: 4px;
+    padding-left: 4px
 }
 #custom-power {
-    padding-right: 18px;
+    padding-right: 14px;
+}
+#custom-menu {
+    padding-left: 12px;
+    padding-right: 12px
+}
+#battery {
+    padding-right: 12px
 }
