--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -3,7 +3,7 @@
     border: none;
     border-radius: 0;
     font-family: "JetBrains Mono";
-    font-size: 18px;
+    font-size: 13pt;
     min-height: 0;
 }
 window#waybar {
@@ -13,39 +13,50 @@ window#waybar {
     padding-right: 2px
 }
 #workspaces button {
-    min-width: 18px;
+    min-width: 14px;
     padding: 0 6px;
     background: transparent;
     color: #555555;
-    transition: border-color 0.5s ease, background 0.5s ease
+    transition: color 0.3s ease
 }
 #workspaces button:hover {
-    min-width: 18px;
+    /* min-width: 18px; */
+    color: #9e4f4f;
     box-shadow: inherit;
-    text-shadow: inherit;
-    background: #252525
+    text-shadow: inherit
 }
 #workspaces button.active {
-    background: #323232;
-    border-bottom: 2px solid #eeeeee; 
-    color: #eeeeee;
+    /* background: #323232; */
+    /* border-bottom: 2px solid #eeeeee; */ 
+    color: #82dd65;
     /* font-weight: bold */
+}
+#network {
+    padding-right: 14px;
+    padding-bottom: 1px;
+    padding-top: 1.5px;
+    color: #6fa0b7
 }
 #pulseaudio {
     font-size: 20px;
-    padding-right: 8px
+    padding-right: 12px;
+    color: #a4965f
 }
 #clock {
-    padding-right: 4px;
-    padding-left: 4px
+    padding-left: 16px;
 }
 #custom-power {
-    padding-right: 14px;
+    padding-right: 15px;
+    padding-left: 6px;
+    padding-top: 2px;
+    color: #9e4f4f 
 }
 #custom-menu {
-    padding-left: 12px;
     padding-right: 12px
 }
 #battery {
-    padding-right: 12px
+    padding-right: 7px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    color: #85b785
 }
