--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,4 +1,6 @@
 @import url("./colors.css");
+
+/* Global Styles */
 * {
     border: none;
     border-radius: 0;
@@ -6,57 +8,76 @@
     font-size: 13pt;
     min-height: 0;
 }
+
+/* Waybar Window */
 window#waybar {
     background: @background;
     color: @foreground;
     padding-left: 2px;
-    padding-right: 2px
+    padding-right: 2px;
 }
+
+/* Workspace Buttons */
 #workspaces button {
     min-width: 14px;
     padding: 0 6px;
     background: transparent;
-    color: #555555;
-    transition: color 0.3s ease
+    color: #444444;
+    transition: color 0.3s ease;
 }
+
 #workspaces button:hover {
-    /* min-width: 18px; */
     color: #9e4f4f;
     box-shadow: inherit;
-    text-shadow: inherit
+    text-shadow: inherit;
 }
+
 #workspaces button.active {
-    /* background: #323232; */
-    /* border-bottom: 2px solid #eeeeee; */ 
-    color: #82dd65;
-    /* font-weight: bold */
+    color: #82C782;
 }
+
+#tray {
+    padding-left: 4px;
+}
+
+/* Network Module */
 #network {
     padding-right: 14px;
-    padding-bottom: 1px;
-    padding-top: 1.5px;
-    color: #6fa0b7
+    padding-left: 6px;
+    padding-top: 0.5px;
+    color: #6fa0b7;
 }
+
+/* Pulseaudio Module */
 #pulseaudio {
     font-size: 20px;
     padding-right: 12px;
-    color: #a4965f
+    color: #a4965f;
 }
+
+/* Clock Module */
 #clock {
-    padding-left: 16px;
+    padding-right: 7px;
+    padding-left: 16px
 }
+
+/* Custom Power Module */
 #custom-power {
-    padding-right: 15px;
-    padding-left: 6px;
-    padding-top: 2px;
-    color: #9e4f4f 
+    padding-right: 14px;
+    padding-left: 7px;
+    font-size: 22;
+    color: #9e4f4f
 }
+
+/* Custom Menu Module */
 #custom-menu {
-    padding-right: 12px
+    padding-right: 12px;
 }
+
+/* Battery Module */
 #battery {
     padding-right: 7px;
     padding-top: 1px;
     padding-bottom: 1px;
-    color: #85b785
+    color: #85b785;
 }
