--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,7 +1,7 @@
 @define-color background-darker #161616;
 @define-color background #1c1c1c;
 @define-color selection #323232;
-@define-color foreground #EEEEEE;
+@define-color foreground #d3d3d3;
 @define-color comment #dfdfdf;
 @define-color cyan #8be9fd;
 @define-color green #50fa7b;
