--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -22,7 +22,7 @@ window#waybar {
     min-width: 14px;
     padding: 0 6px;
     background: transparent;
-    color: #555555;
+    color: #404040;
     transition: color 0.3s ease;
 }
 
@@ -33,7 +33,8 @@ window#waybar {
 }
 
 #workspaces button.active {
-    color: #a4d03f 
+    color: #6E8F2A;
+    font-weight: bold
 }
 
 #tray {
