--- a/gtk/.themes/Mono_Mod/gtk-3.0/gtk.css
+++ b/gtk/.themes/Mono_Mod/gtk-3.0/gtk.css
@@ -1,6 +1,5 @@
 * {
     outline-color: rgba(255, 255, 255, 0.1);
-    background-color: 1c1c1c;
 }
 
 /*BACKGROUND*/
@@ -9,6 +8,10 @@
     color: white;
     background-color: #1c1c1c;
     transition: 0ms;
+}
+
+.libreoffice .view {
+    background-color: #2e2e2e;
 }
 
 .background:backdrop {
