--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,7 +4,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrains Mono";
+    font-family: "JetBrainsMono";
     font-size: 13pt;
     min-height: 0;
 }
@@ -34,7 +34,6 @@ window#waybar {
 
 #workspaces button.active {
     color: #6E8F2A;
-    font-weight: bold
 }
 
 /* System tray */
