Updated waybar fonts

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,8 +4,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrains Mono";
-    font-size: 13pt;
+    font-family: "Rubik", "JetBrains Mono Nerd Font";
+    font-size: 14pt;
     min-height: 0;
 }
 
@@ -24,6 +24,7 @@ window#waybar {
     background: transparent;
     color: @inactive;
     transition: color 0.3s ease;
+    font-weight: 400
 }
 
 #workspaces button:hover {
