--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,8 +4,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "JetBrains Mono Nerd Font";
-    font-size: 14pt;
+    font-family: "JetBrains Mono";
+    font-size: 13pt;
     min-height: 0;
 }
 
