Fastfetch configuration has now been made extremely compact.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -40,7 +40,8 @@ window#waybar {
 
 /* System tray */
 #tray {
-    padding-left: 2px
+    padding-top: 2px;
+    padding-right: 2px
 }
 
 /* Network Module */
